--- a/services/proxycar/Cargo.toml
+++ b/services/proxycar/Cargo.toml
@@ -15,3 +15,5 @@ tower = "0.5.1"
 config = "0.14.1"
 hyper = { version = "1.5.0", features = ["client"] }
 reqwest = "0.12.9"
+multitool-hg = { version = "0.1.3", features = ["logger"] }
+log = "0.4.22"
