--- a/services/proxycar/Cargo.toml
+++ b/services/proxycar/Cargo.toml
@@ -17,3 +17,4 @@ hyper = { version = "1.5.0", features = ["client"] }
 reqwest = "0.12.9"
 multitool-hg = { version = "0.1.3", features = ["logger"] }
 log = "0.4.22"
+tracing = "0.1.40"
